--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,11 @@
 @tailwind utilities;
 
 @layer components {
-  .heroButton {
+  .hero-button {
     @apply px-6 py-2 border border-[#242424] rounded-full uppercase text-xs tracking-widest text-gray-500 transition-all hover:border-[#9AFF7950] hover:text-[#9AFF79];
+  }
+
+  .contact-input {
+    @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-4 border-[#242424] text-gray-200 placeholder-gray-500 transition-all focus:border-[#e0900050] hover:border-[#e0900050] focus:text-[#e09000];
   }
 }
